--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.13",
     "core-js": "^3.8.3",
+    "tailwindcss": "^4.0.13",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
